# Form-pro

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  package-lock.json  package.json  pyproject.toml  vercel.json
.github/workflows/: ci.yml  linter.yml  pr-title-check.yml  typecheck.yml
backend/: .env.example  bootstrap.js  package-lock.json  package.json  seed.js  seed_log.txt  server.js
backend/middleware/: auth.js
backend/models/: Form.js  FormSubmission.js  Team.js  User.js
backend/routes/: auth.js  doctypes.js  files.js  forms.js  settings.js  submissions.js  teams.js  user.js
forms_pro/: hooks.py  install.py  modules.txt  patches.txt  roles.py
forms_pro/api/: form.py  settings.py  submission.py  team.py  user.py
forms_pro/fixtures/: role.json
forms_pro/overrides/: invitations.py  roles.py
forms_pro/patches/0_1_beta/: create_user_forms_module_def.py
forms_pro/public/avatars/: avatar_attribution.md
forms_pro/public/js/: forms_pro_desk.js
forms_pro/tests/: __init__.py  test_invitations.py  test_roles.py
forms_pro/utils/: form_generator.py  teams.py  test_form_generator.py
forms_pro/www/: forms.py  frontend.py
frontend/: .gitignore  biome.json  build_log.txt  components.d.ts  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json  tsconfig.node.json  typecheck.sh  types.d.ts  vite.config.js  vite.config.js.timestamp-1774870123913-7edead129f1208.mjs
frontend/src/: App.vue  index.css  main.js  main.ts  router.js  router.ts  socket.js  socket.ts  vue-shims.d.ts
frontend/src/assets/: Logo.vue
frontend/src/components/: FieldEditorSidebar.vue  FormBuilderContent.vue  FormBuilderHeader.vue  FormBuilderSidebar.vue  RenderField.vue
frontend/src/composables/: useQueryParam.ts
frontend/src/data/: session.js  session.ts  user.js  user.ts
frontend/src/layouts/: BaseLayout.vue  FormBuilderLayout.vue
frontend/src/pages/: Dashboard.vue  EditForm.vue  Login.vue  SubmissionPage.vue
frontend/src/stores/: editForm.ts  editSubmission.ts  submissionForm.ts  team.ts  user.ts
(+69 files in other folders)
