[project]
name = "forms_pro"
authors = [
    { name = "Harsh Tandiya", email = "harsh@buildwithhussain.com" },
    { name = "BWH Studios", email = "developers@buildwithhussain.com" },
]
description = "Web Forms on steroids!"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
    "Faker~=38.2.0",
    "dnspython==2.8.0",
    "email-validator==2.3.0",
]

[project.urls]
Repository = "https://github.com/buildwithhussain/forms_pro"

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

[tool.bench.frappe-dependencies]
frappe = ">=17.0.0-dev,<18.0.0"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "B", "RUF"]
ignore = [
    "E501", # line too long
]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
